[MODORDERS-892] Using the new transaction batch endpoint (#833)